# omniBot

./: .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/keyboard_interface/include/keyboard_interface/msg/: key_event.h  key_event.hpp  keys.h  keys.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/keyboard_interface/share/keyboard_interface/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/keyboard_interface/share/keyboard_interface/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  keyboard_interfaceConfig.cmake  keyboard_interface__rosidl_generator_cExport-noconfig.cmake  keyboard_interface__rosidl_generator_cExport.cmake  keyboard_interface__rosidl_generator_cppExport.cmake  keyboard_interface__rosidl_typesupport_cExport-noconfig.cmake  keyboard_interface__rosidl_typesupport_cExport.cmake  keyboard_interface__rosidl_typesupport_cppExport-noconfig.cmake  keyboard_interface__rosidl_typesupport_cppExport.cmake  keyboard_interface__rosidl_typesupport_introspection_cExport-noconfig.cmake  rosidl_cmake-extras.cmake  (+5 more)
install/omnibot_control/share/omnibot_control/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/omnibot_description/share/omnibot_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/omnibot_ignition/share/omnibot_ignition/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
keyboard_interface/: CMakeLists.txt  package.xml
keyboard_interface/msg/: KeyEvent.msg  Keys.msg
keyboard_interface/scripts/: KeyboardInterface.py  keyboard_node.py
log/: latest_build
omnibot_control/: CMakeLists.txt  package.xml
omnibot_control/include/joy_teleop/: JoyTeleop.hpp
omnibot_control/include/keyboard_teleop/: KeyboardTeleop.hpp
omnibot_control/launch/: joy_teleop.launch.py  keyboard_teleop.launch.py
omnibot_control/src/: JoyTeleop.cpp  KeyboardTeleop.cpp  test_vel_control.cpp
omnibot_description/: CMakeLists.txt  package.xml
omnibot_description/launch/: display.launch.py  spawn.launch.py  spawn_ignition.launch.py  start_robot.launch.py
omnibot_description/meshes/: base_link.dae  base_link.stl  lidar.dae  mecanum_wheel_back_left.dae  mecanum_wheel_back_left.stl  mecanum_wheel_back_right.dae  mecanum_wheel_back_right.stl  mecanum_wheel_front_left.dae  mecanum_wheel_front_left.stl  mecanum_wheel_front_right.dae  mecanum_wheel_front_right.stl  raspicam.dae
omnibot_description/rviz/: config.rviz  nav2.rviz
omnibot_description/urdf/: base.urdf.xacro  omnibot.urdf.xacro  sensors.urdf.xacro  wheel.urdf.xacro
omnibot_ignition/: CMakeLists.txt  package.xml
omnibot_ignition/env-hooks/: omnibot_ignition.sh.in
omnibot_ignition/launch/: spawn.launch.py  spawn_ignition.launch.py  start_simulation.launch.py
omnibot_ignition/models/coin/: model.config  model.sdf  source.blend
omnibot_ignition/models/goomba/: model.sdf
omnibot_ignition/models/goomba/meshes/: collision.stl
omnibot_ignition/models/omni_walls/: model.config  model.sdf
omnibot_ignition/models/omni_walls/meshes/: omni_walls.dae
omnibot_ignition/models/plumbing/: model.config  model.sdf
omnibot_ignition/models/star/: source.blend
omnibot_ignition/models/star/meshes/: collision.stl  visual.dae
omnibot_ignition/models/walls/: model.config  model.sdf  source.blend
omnibot_ignition/models/walls/meshes/: collision.stl  visual.dae
omnibot_ignition/plugin/omni_drive/: CMakeLists.txt  OmniDrive.cc  OmniDrive.hh
omnibot_ignition/plugin/omni_drive/include/: OmniDriveOdometry.cc  OmniDriveOdometry.hh
omnibot_ignition/worlds/: mario_world.sdf  omni_world.sdf
omnibot_navigation/: CMakeLists.txt  package.xml
omnibot_navigation/config/: ekf.yaml  nav2.yaml  nav2_diff.yaml  nav2_omni.yaml  slam_online_async.yaml
omnibot_navigation/launch/: ekf_localization.launch.py  navigation2.launch.py  slam_online_async.launch.py
(+66 files in other folders)
